5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1662_2970.log
== SUBMITION (2019-04-15 14:21:27) 
-- CODE:
t = int(input("tempo de investimento: "))
Qf = 1,042,000.00
Qo = 1,500.00
i == ((Qf/Qo)**(1/t)) - 1
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- EXECUTION TIME:
0.165671
-- ERROR:
  File "/home/codebench/codes/1662/2970/main.py", line 2
    Qf = 1,042,000.00
             ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:21:33) 
-- CODE:
t = int(input("tempo de investimento: "))
Qf = 1,042,000.00
Qo = 1,500.00
i == ((Qf/Qo)**(1/t)) - 1
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
File "XXXX", line 2
    Qf = 1,042,000.00
             ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:21:53) 
-- CODE:
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i == ((Qf/Qo)**(1/t)) - 1
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i == ((Qf/Qo)**(1/t)) - 1
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:05) 
-- CODE:
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i = ((Qf/Qo)**(1/t)) - 1
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = ((Qf/Qo)**(1/t)) - 1
TypeError: unsupported operand type(s) for /: 'tuple' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:22:32) 
-- CODE:
from math import*
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i = ((Qf/Qo)**(1/t)) - 1
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- EXECUTION TIME:
0.122404
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2970/main.py", line 5, in <module>
    i = ((Qf/Qo)**(1/t)) - 1
TypeError: unsupported operand type(s) for /: 'tuple' and 'tuple'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:34) 
-- CODE:
from math import*
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i = ((Qf/Qo)**(1/t)) - 1
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i = ((Qf/Qo)**(1/t)) - 1
TypeError: unsupported operand type(s) for /: 'tuple' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:10) 
-- CODE:
from math import*
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i = (((Qf/Qo)**(1/t)) - 1)
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i = (((Qf/Qo)**(1/t)) - 1)
TypeError: unsupported operand type(s) for /: 'tuple' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:24) 
-- CODE:
from math import*
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i = ((Qf/Qo**(1/t)) - 1)
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i = ((Qf/Qo**(1/t)) - 1)
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:52) 
-- CODE:
from math import*
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i = float((Qf/Qo**(1/t)) - 1)
print(i)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i = float((Qf/Qo**(1/t)) - 1)
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:28) 
-- CODE:
from math import*
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i = float((Qf/Qo**(1/t)) - 1)
print(round(i, 5)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
File "XXXX", line 7
    if(i<=0.01):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:48) 
-- CODE:
from math import*
t = int(input("tempo de investimento: "))
Qf = 1,420,000.00
Qo = 1,500.00
i = float((Qf/Qo**(1/t)) - 1)
print(i, 5)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i = float((Qf/Qo**(1/t)) - 1)
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:44) 
-- CODE:
from math import*
t = int(input("tempo de investimento: "))
Qf = 800000
Qo = 1,500.00
i = float((Qf/Qo**(1/t)) - 1)
print(i, 5)
if(i<=0.01):
	msg = (Real)
else:
	msg = (Irreal)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    i = float((Qf/Qo**(1/t)) - 1)
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:21) 
-- CODE:
t = int(input("tempp: "))
Qf = 200 
Qo = 10
i = Qf/Qo**(1/t) - 1
print(i)
-- OUTPUT:
198.30134924305568
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:27) 
-- CODE:
t = int(input("tempp: "))
Qf = 200 
Qo = 10
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = (real)
else:
	msg = (irreal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    msg = (irreal)
NameError: name 'irreal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:56) 
-- CODE:
t = int(input("tempp: "))
Qf = 200 
Qo = 10
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("real")
else:
	msg = ("irreal")
-- OUTPUT:
198.30134924305568
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:31:03) 
-- CODE:
t = int(input("tempo: "))
Qf = 200 
Qo = 10
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("real")
else:
	msg = ("irreal")
-- OUTPUT:
198.30134924305568
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:31:34) 
-- CODE:
t = int(input("tempo: "))
Qf = 200 
Qo = 10
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("real")
else:
	msg = ("irreal")
print(msg)
-- OUTPUT:
198.30134924305568
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:31:40) 
-- CODE:
t = int(input("tempo: "))
Qf = 200 
Qo = 10
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("real")
else:
	msg = ("irreal")
print(msg)
-- EXECUTION TIME:
0.187421
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
198.30134924305568
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
198.18658424244882
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
197.0903544069602
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:32:13) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000 
Qo = 1500
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("real")
else:
	msg = ("irreal")
print(msg)
-- EXECUTION TIME:
0.165723
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
1030482.0023364745
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
1028598.5228068469
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
1010726.321227418
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:14) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000 
Qo = 1500
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("real")
else:
	msg = ("irreal")
print(msg)
-- OUTPUT:
1030482.0023364745
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:49) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000 
Qo = 1500
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- OUTPUT:
1030482.0023364745
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:13) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000 
Qo = 1500
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- EXECUTION TIME:
0.205165
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
1030482.0023364745
Irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
1028598.5228068469
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
1010726.321227418
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:13) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000 
Qo = 1500
i = Qf/Qo**(1/t) - 1
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- OUTPUT:
1030482.0023364745
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:29) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000 
Qo = 1500
i = (Qf/Qo**(1/t)) - 1
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- OUTPUT:
1030482.0023364745
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:34:36) 
-- CODE:
t = int(input("tempo: "))
Qf = 1,042,000.00 
Qo = 1500.00
i = (Qf/Qo**(1/t)) - 1
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- ERROR:
File "XXXX", line 2
    Qf = 1,042,000.00 
             ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:05) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000.00 
Qo = 1500.00
i = round((Qf/Qo**(1/t)) - 1, 5)
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- OUTPUT:
1030482.00234
Irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:35:14) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000.00 
Qo = 1500.00
i = round((Qf/Qo**(1/t)) - 1, 5)
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- EXECUTION TIME:
0.244328
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
1030482.00234
Irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
1028598.52281
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
1010726.32123
Irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:33) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000.00 
Qo = 1500.00
i = round(((Qf/Qo)**(1/t)) - 1, 5)
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- OUTPUT:
0.00999
Real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:35:39) 
-- CODE:
t = int(input("tempo: "))
Qf = 1042000.00 
Qo = 1500.00
i = round(((Qf/Qo)**(1/t)) - 1, 5)
print(i)
if(i<=0.01):
	msg = ("Real")
else:
	msg = ("Irreal")
print(msg)
-- EXECUTION TIME:
0.143322
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
Irreal
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
